--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+  <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
   <title>Xinto's web</title>
-  <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+  <link
+    rel="preload"
+    href="https://fonts.googleapis.com/css?family=Inter&display=swap"
+    as="style"
+    onload="this.onload=null;this.rel='stylesheet'"
+  />
+  <noscript>
+    <link
+      href="https://fonts.googleapis.com/css?family=Inter&display=swap"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </noscript>
 </head>
 
 <body>
