add meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Xinto's website showcasing his bio and his projects." />
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
   <title>Xinto's web</title>
   <link
