--- a/index.html
+++ b/index.html
@@ -8,19 +8,8 @@
   <meta name="description" content="Xinto's website showcasing his bio and his projects." />
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
   <title>Xinto's web</title>
-  <link
-    rel="preload"
-    href="https://fonts.googleapis.com/css?family=Inter&display=swap"
-    as="style"
-    onload="this.onload=null;this.rel='stylesheet'"
-  />
-  <noscript>
-    <link
-      href="https://fonts.googleapis.com/css?family=Inter&display=swap"
-      rel="stylesheet"
-      type="text/css"
-    />
-  </noscript>
+  <link rel="preconnect" href="https://rsms.me/">
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 
 <body>
