--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <meta name="description" content="Xinto's website showcasing his bio and his projects." />
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
   <title>Xinto's web</title>
-  <link rel="preconnect" href="https://rsms.me/">
-  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 
 <body>
