--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <noscript>You will the JavaScript NOW!</noscript>
+  <noscript>You will enable JavaScript NOW!</noscript>
   <div id="root"></div>
 
   <script src="/src/index.tsx" type="module"></script>
